1.2.6 Sep 11th 2008
	- GEOIP_METRO_CODE replace the depreciated GEOIP_DMA_CODE ( Boris Zentner )
1.2.5 Aug 13th 2008
	! Fix GEOIP_REGION and GEOIP_COUNTRY_CODE when used with the GeoIPRegion database. Both are only set if a region or country was found. Previously a empty string was assigned to both ( Boris Zentner )
	- Add GEOIP_REGION_NAME for City and Region databases ( Boris Zentner )
1.2.4 Jun 10th 2008
	! mod_geoip2 has sets GEOIP_COUNTRY_CODE to -- for unknown countries when used with the country database. But for any other database ( City for example ) GEOIP_COUNTRY_CODE is unset for unknown countries. This is fixed now. Same for GEOIP_CONTINENT_CODE and GEOIP_COUNTRY_NAME. ( Boris Zentner )
	- Add GEOIP_ADDR. That's the address used to compute the geoip information. Exported as env, notes or both as usual ( Jason Caldwell )
	- Try to run always before mod_setenvif and mod_rewrite. ( Boris Zentner ) 
1.2.3 Apr 26th 2008
	- Skip files that we can not open for some reason ( permission/typo ). Check and skip empty slots in geoip_header_parser ( Boris Zentner )
	- Slight performance increase - don't make per_dir ap_get_module_config call where we return DECLINED because cfg->GeoIPEnabled is true (Guenter Knauf)
	- NetWare/Win32 compilation fixes, since can't declare vars in middle of code (Guenter Knauf)

1.2.2 Mar 18th 2008
	- Fix race condition for IO based caches like Standard. MMapCache and MemoryCache are not affected. ( Boris Zentner )

1.2.1 Dec 17th 2007
	! Notice, that all directives are _only_ valid in server context. Expect GeoIPEnabled. Check you configuraion with apachectl configtest ( Boris Zentner )
	- Added MMapCache option (Boris Zentner)
	- Change GeoIPEnabled from a serverwide option to a server/directory/location keyword. (Boris Zentner)
	- Fix a small memleak per child. Allocated in geoip_child_init free in geoip_cleanup (Boris Zentner)
	- GeoIP databases get used serverwide now. Not per child. See the README. (Boris Zentner)